[gd_scene load_steps=18 format=3 uid="uid://de3l1l1odllgl"]

[ext_resource type="Texture2D" uid="uid://dw31y0mhrumxs" path="res://tiny_wizard/assets/placeholder_art/doors/down_door.png" id="2_e7uf5"]
[ext_resource type="Texture2D" uid="uid://dxh5t6ro7hge7" path="res://tiny_wizard/assets/art/room.png" id="2_hc0od"]
[ext_resource type="Script" path="res://tiny_wizard/room/room.gd" id="2_xgkvw"]
[ext_resource type="Texture2D" uid="uid://d1s2ukc8f6whb" path="res://tiny_wizard/assets/placeholder_art/doors/left_door.png" id="3_0mrgv"]
[ext_resource type="Texture2D" uid="uid://cscxbuydxapwd" path="res://tiny_wizard/assets/placeholder_art/doors/right_door.png" id="4_2wnvf"]
[ext_resource type="Texture2D" uid="uid://xkr7xx2o0qmc" path="res://tiny_wizard/assets/placeholder_art/doors/up_door.png" id="5_3b5w2"]
[ext_resource type="Texture2D" uid="uid://cnljfwwa5245a" path="res://tiny_wizard/assets/art/hole_tileset.png" id="7_lwcn3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5api5"]
size = Vector2(80, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inhan"]
size = Vector2(80, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wuee"]
size = Vector2(8, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvr3b"]
size = Vector2(24, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7l46"]
size = Vector2(8, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7pgd"]
size = Vector2(24, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_waymt"]
size = Vector2(72, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kcdod"]
size = Vector2(72, 24)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fjj7s"]
texture = ExtResource("7_lwcn3")
texture_region_size = Vector2i(63, 63)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/terrains_peering_bit/right_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/left_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/terrains_peering_bit/bottom_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/terrains_peering_bit/right_side = 0
0:3/0/terrains_peering_bit/top_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
1:3/0/terrains_peering_bit/top_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/top_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31.5, -31.5, 31.5, -31.5, 31.5, 31.5, -31.5, 31.5)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_is1mf"]
tile_size = Vector2i(63, 63)
physics_layer_0/collision_layer = 64
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Holes"
terrain_set_0/terrain_0/color = Color(0.501961, 0.345098, 0.25098, 1)
custom_data_layer_0/name = ""
custom_data_layer_0/type = 0
sources/0 = SubResource("TileSetAtlasSource_fjj7s")

[node name="Room" type="Node2D"]
y_sort_enabled = true
position = Vector2(0, 200)
script = ExtResource("2_xgkvw")

[node name="RoomWalls" type="Sprite2D" parent="."]
z_index = -3
texture = ExtResource("2_hc0od")
centered = false

[node name="DownDoor" type="Sprite2D" parent="RoomWalls"]
position = Vector2(512, 557)
texture = ExtResource("2_e7uf5")

[node name="Area2D" type="Area2D" parent="RoomWalls/DownDoor"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomWalls/DownDoor/Area2D"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_5api5")

[node name="Locker" type="StaticBody2D" parent="RoomWalls/DownDoor"]
position = Vector2(0, -13)
collision_layer = 0
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomWalls/DownDoor/Locker"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_inhan")

[node name="LeftDoor" type="Sprite2D" parent="RoomWalls"]
position = Vector2(48, 280)
texture = ExtResource("3_0mrgv")

[node name="Area2D" type="Area2D" parent="RoomWalls/LeftDoor"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomWalls/LeftDoor/Area2D"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_3wuee")

[node name="Locker" type="StaticBody2D" parent="RoomWalls/LeftDoor"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomWalls/LeftDoor/Locker"]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_wvr3b")

[node name="RightDoor" type="Sprite2D" parent="RoomWalls"]
position = Vector2(979, 280)
texture = ExtResource("4_2wnvf")

[node name="Area2D" type="Area2D" parent="RoomWalls/RightDoor"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomWalls/RightDoor/Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_a7l46")

[node name="Locker" type="StaticBody2D" parent="RoomWalls/RightDoor"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomWalls/RightDoor/Locker"]
position = Vector2(-7, 0)
shape = SubResource("RectangleShape2D_b7pgd")

[node name="UpDoor" type="Sprite2D" parent="RoomWalls"]
position = Vector2(515, 51)
texture = ExtResource("5_3b5w2")

[node name="Area2D" type="Area2D" parent="RoomWalls/UpDoor"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomWalls/UpDoor/Area2D"]
position = Vector2(1, 9)
shape = SubResource("RectangleShape2D_waymt")

[node name="Locker" type="StaticBody2D" parent="RoomWalls/UpDoor"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomWalls/UpDoor/Locker"]
position = Vector2(1, 17)
shape = SubResource("RectangleShape2D_kcdod")

[node name="StaticBody2D" type="StaticBody2D" parent="RoomWalls"]
collision_mask = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoomWalls/StaticBody2D"]
polygon = PackedVector2Array(0, 80, 480, 80, 480, 56, 552, 56, 552, 80, 960, 80, 960, 256, 984, 256, 984, 304, 960, 304, 960, 520, 552, 520, 552, 544, 472, 544, 472, 520, 64, 520, 64, 304, 40, 304, 40, 256, 64, 256, 64, 80, 0, 80, 0, 600, 1024, 600, 1024, 0, 0, 0)

[node name="RightSpawnPoint" type="Marker2D" parent="."]
position = Vector2(88, 280)

[node name="DownSpawnPoint" type="Marker2D" parent="."]
position = Vector2(512, 104)

[node name="LeftSpawnPoint" type="Marker2D" parent="."]
position = Vector2(936, 280)

[node name="UpSpawnPoint" type="Marker2D" parent="."]
position = Vector2(512, 496)

[node name="Enemies" type="Node2D" parent="."]
y_sort_enabled = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(8, 20)
tile_set = SubResource("TileSet_is1mf")
format = 2
layer_0/name = "Ground"
layer_0/z_index = -2

[connection signal="body_entered" from="RoomWalls/DownDoor/Area2D" to="." method="enter_door" binds= [Vector2(0, 1)]]
[connection signal="body_entered" from="RoomWalls/LeftDoor/Area2D" to="." method="enter_door" binds= [Vector2(-1, 0)]]
[connection signal="body_entered" from="RoomWalls/RightDoor/Area2D" to="." method="enter_door" binds= [Vector2(1, 0)]]
[connection signal="body_entered" from="RoomWalls/UpDoor/Area2D" to="." method="enter_door" binds= [Vector2(0, -1)]]
[connection signal="child_exiting_tree" from="Enemies" to="." method="_on_enemies_child_exiting_tree"]
